--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ baseurl: '/PanelCV' #change it according to your repository name
 
 
 # Profile information
-yourname: Brown Smith  ## put your name
+yourname: Maliwan Chumpoosan  ## put your name
 title: 'GRAPHIC &amp; WEB DESIGNER'  ## your title
-location: San Francisco , CA
+location: Ubon Ratchathani, Thailand
 
 
 ## Social Profiles
